--- a/public/css/main.css
+++ b/public/css/main.css
@@ -284,7 +284,8 @@ body{
   color: #fff;
 }
 #reschedule-task-modal .modal-header{
-  background: #ddd;
+  background: #0586ff;
+  color: #fff;
 }
 
 .btn-primary.btn-green{
@@ -329,7 +330,7 @@ body{
   margin-bottom: 0;
 }
 .form-group{
-  border-bottom: 1px solid #e9ecef;
+  border-bottom: 1px solid #e4e4e4;
   padding-bottom: 1rem;
 }
 .form-group:last-child{
@@ -337,7 +338,7 @@ body{
   padding-bottom: 0;
 }
 label{
-  margin-bottom: .3rem;
+  margin-bottom: 0;
 }
 .form-group.flexed{
   display: flex;
@@ -359,4 +360,25 @@ label{
 }
 .task-form > div:first-child{
   border-right: 1px solid #e4e4e4;
+}
+
+.form-control.money{
+  text-align: right;
+}
+.task-balance-amount-group{
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.task-details{
+  background: repeating-linear-gradient(
+    -55deg,
+    #f9f9f9,
+    #f9f9f9 10px,
+    #fff 10px,
+    #fff 20px
+  );
+  margin: -1rem 0;
+  padding: 1rem;
 }
