--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,7 +40,6 @@ body{
   color: #fefefe;
   position: relative;
   z-index: 0;
-  width: 200px;
   padding: 10px;
   min-height: 95vh;
 }
@@ -64,18 +63,39 @@ body{
   display: block;
   padding: 10px;
 }
+.sidebar .nav-list .heading:last-child{
+  margin-bottom: 10px;
+}
 .sidebar .nav-list a{
   display: block;
   padding: 10px 15px;
   line-height: 1em;
   color: #fff;
   font-size: .8em;
+  padding-left: 50px;
+}
+.sidebar .nav-list a.heading{
+  font-size: 1em;
+}
+.sidebar .nav-list .heading i{
+  width: 30px;
+  text-align: center;
+  margin-right: 5px;
 }
 .content{
   padding: 15px;
   flex: 1;
   padding-bottom: 50px;
 }
+@media only screen and (min-width: 1251px) {
+  .sidebar{
+    max-width: 250px;
+  }
+  .content{
+    max-width: 100%;
+  }
+}
+
 
 
 .db-boxes-row{
@@ -450,5 +470,136 @@ label{
   }
   .db-info-bar-box .label{
     min-height: 0;
+  }
+}
+
+/* Tenant Table */
+.tenant-table{
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2em;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.tenant-table.table thead th{
+  background: #414141;
+  color: #fff;
+}
+.tenant-table.table tbody td{
+  vertical-align: middle;
+}
+.tenant-table.table tbody td.street-address{
+  text-align: left;
+}
+.tenant-table tbody tr{
+  border-left: 10px solid #e4e8eb;
+  border-right: 10px solid #e4e8eb;
+}
+.tenant-table tbody tr.status-2{
+  border-left: 10px solid #ffc107;
+  border-right: 10px solid #ffc107;
+}
+.tenant-table.table-bordered tbody tr:last-child td{
+  border-bottom: 6px solid #e4e8eb;
+}
+
+.contact-button{
+  width: 100%;
+  display: flex;
+}
+.contact-button a.btn{
+  width: 100%;
+  background: none;
+  color: inherit;
+  text-align: left;
+  overflow: hidden;
+  flex: 1;
+  max-width: 170px;
+}
+.contact-button .dropdown-menu{
+  /* width: 100%; */
+  padding: 5px;
+  background: #545b62;
+  color: #fff;
+}
+.contact-button i{
+  margin-right: .5em;
+}
+.contact-button .dropdown-item{
+  padding: .5em;
+  border-radius: 3px;
+}
+.contact-button a.dropdown-item{
+  color: #fff;
+}
+.contact-button .dropdown-item:hover{
+  background: #80888f;
+}
+
+@media only screen and (max-width: 1435px) and (min-width: 1250px){
+  table.tenant-table .created-on,
+  table.tenant-table .updated-on{
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1251px){
+  table.tenant-table thead,
+  table.tenant-table tbody,
+  table.tenant-table th,
+  table.tenant-table tr,
+  table.tenant-table td{
+    display: block;
+  }
+  table.tenant-table tr{
+    display: inline-block;
+    width: 33%;
+    vertical-align: top;
+    margin-bottom: 20px;
+    border: 5px solid #555;
+    text-align: left;
+  }
+  table.tenant-table thead,
+  table.tenant-table .id{
+    display: none;
+  }
+  table.tenant-table .name{
+    font-size: 2em;
+    line-height: 1em;
+    font-weight: bold;
+  }
+  table.tenant-table .view-button .btn{
+    width: 100%;
+  }
+
+  table.tenant-table .street-address::before{
+    content: 'Street Address: ';
+    width: 100%;
+  }
+  table.tenant-table .city::before{
+    content: 'City: ';
+  }
+  table.tenant-table .state::before{
+    content: 'State: ';
+  }
+  table.tenant-table .zip::before{
+    content: 'Zip: ';
+  }
+  table.tenant-table .created-on::before{
+    content: 'Created On: ';
+    width: 100%;
+  }
+  table.tenant-table .updated-on::before{
+    content: 'Updated On: ';
+    width: 100%;
+  }
+  table.tenant-table td::before{
+    font-weight: bold;
+    width: 50px;
+    display: inline-block;
+  }
+
+  .contact-button a.btn{
+    max-width: none;
   }
 }
