--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,9 @@ body{
 .top-nav-bar, .top-nav-bar .navbar{
   background: #1ab394;
 }
+.navbar-toggler-icon i{
+  line-height: 30px;
+}
 .top-nav-bar a{
   color: #fefefe;
 }
@@ -343,6 +346,7 @@ body{
   margin: 0;
   margin-right: auto !important;
   font-size: .9em;
+  line-height: 1.2em;
   cursor: pointer;
   text-align: left;
 }
@@ -467,11 +471,46 @@ label{
   .db-info-bar-box{
     margin-bottom: 10px;
     display: flex;
+    align-items: center;
+    justify-content: center;
   }
+  .db-info-bar-box .label{
+    flex: 2;
+  }
+  .db-info-bar-box .text{
+    flex: 1;
+  }
+} /* (max-width: 767px) */
+
+@media only screen and (max-width: 585px){
+  .db-info-bar-box{
+    flex-direction: column;
+  }
+  .db-info-bar-box .label{
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .db-info-bar-box > *{
+    width: 100%;
+  }
+} /* (max-width: 585px) */
+@media only screen and (max-width: 585px) and (min-width: 431px){
   .db-info-bar-box .label{
     min-height: 0;
   }
 }
+
+@media only screen and (max-width: 430px){
+  .db-info-bar-box{
+    flex-direction: row;
+    padding: 0 !important;
+  }
+  .db-info-bar-row > *{
+    min-width: 100%;
+    padding: 0 5px 0;
+  }
+
+} /* (max-width: 430px) */
 
 /* Tenant Table */
 .tenant-table{
@@ -488,8 +527,12 @@ label{
 .tenant-table.table tbody td{
   vertical-align: middle;
 }
-.tenant-table.table tbody td.street-address{
+.tenant-table.table tbody td.street-address,
+.tenant-table.table tbody td.name{
   text-align: left;
+}
+.tenant-table.table tbody td.name{
+  min-width: 150px;
 }
 .tenant-table tbody tr{
   border-left: 10px solid #e4e8eb;
@@ -501,6 +544,17 @@ label{
 }
 .tenant-table.table-bordered tbody tr:last-child td{
   border-bottom: 6px solid #e4e8eb;
+}
+.tenant-table .date{
+  text-transform: uppercase;
+}
+.tenant-table .date-readable{
+  display: block;
+  font-style: italic;
+  font-size: .9em;
+  line-height: 1em;
+  color: #80888f;
+  margin: 5px 0 0;
 }
 
 .contact-button{
@@ -535,15 +589,21 @@ label{
 .contact-button .dropdown-item:hover{
   background: #80888f;
 }
+@media only screen and (max-width: 1300px){
+  .tenant-table.table tbody td.name{
+    min-width: 0;
+  }
+} /* (max-width: 1300px) */
 
 @media only screen and (max-width: 1435px) and (min-width: 1250px){
   table.tenant-table .created-on,
   table.tenant-table .updated-on{
     display: none;
   }
-}
+} /* (max-width: 1435px) and (min-width: 1250px) */
 
 @media only screen and (max-width: 1251px){
+  table.tenant-table,
   table.tenant-table thead,
   table.tenant-table tbody,
   table.tenant-table th,
@@ -551,20 +611,45 @@ label{
   table.tenant-table td{
     display: block;
   }
+  table.tenant-table tbody{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+  }
+  table.tenant-table tbody::after {
+    content: "";
+    flex: 1;
+    max-width: 33%;
+  }
   table.tenant-table tr{
-    display: inline-block;
-    width: 33%;
-    vertical-align: top;
-    margin-bottom: 20px;
+    max-width: 33%;
+    margin-bottom: 10px;
     border: 5px solid #555;
     text-align: left;
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+  }
+  .table-striped tbody tr:nth-of-type(odd),
+  .table-striped tbody tr:nth-of-type(even){
+    background: #fff;
+  }
+  table.tenant-table tr td{
+    width: 100%;
+  }
+  table.tenant-table tr td.created-on{
+    flex: 1;
+  }
+  table.tenant-table tr td.updated-on{
+    flex: 2;
   }
   table.tenant-table thead,
   table.tenant-table .id{
     display: none;
   }
   table.tenant-table .name{
-    font-size: 2em;
+    font-size: 1.5em;
     line-height: 1em;
     font-weight: bold;
   }
@@ -586,20 +671,166 @@ label{
     content: 'Zip: ';
   }
   table.tenant-table .created-on::before{
-    content: 'Created On: ';
+    content: 'Created: ';
     width: 100%;
   }
   table.tenant-table .updated-on::before{
-    content: 'Updated On: ';
+    content: 'Updated: ';
     width: 100%;
+  }
+  .tenant-table tbody tr.status-2{
+    border: 5px solid #ffc107;
+  }
+  .tenant-table.table-bordered tbody tr:last-child td{
+    border-bottom: 1px solid #dee2e6;
   }
   table.tenant-table td::before{
     font-weight: bold;
-    width: 50px;
-    display: inline-block;
+  }
+  table.tenant-table td.updated-on::before,
+  table.tenant-table td.street-address::before{
+    display: block;
+  }
+  table.tenant-table td.city,
+  table.tenant-table td.state,
+  table.tenant-table td.zip{
+    display: flex;
+  }
+  table.tenant-table td.city::before,
+  table.tenant-table td.state::before,
+  table.tenant-table td.zip::before{
+    max-width: 50px;
+    padding-right: 5px;
+    flex: 1;
   }
 
   .contact-button a.btn{
     max-width: none;
   }
+} /* (max-width: 1251px) */
+
+@media only screen and (min-width: 1001px){
+  .sidebar .nav-list li.open-link{
+    display: none;
+  }
 }
+
+@media only screen and (max-width: 1000px){
+  .sidebar{
+    max-width: 55px;
+    overflow: hidden;
+    white-space: nowrap;
+    position: absolute;
+    left: 0;
+    z-index: 10;
+  }
+  .sidebar > ul > li:first-child ~ li{
+    opacity: 0;
+    pointer-events: none;
+  }
+  .content{
+    max-width: 100%;
+    width: 100%;
+    padding-left: 55px;
+    padding-right: 0;
+  }
+  .sidebar .nav-list li.open-link a{
+    color: transparent;
+  }
+  .sidebar .nav-list li.open-link a i{
+    color: #fff;
+  }
+  .sidebar.open .nav-list li.open-link a{
+    color: inherit;
+  }
+  .sidebar .nav-list li.open-link a i.close-icon{
+    display: none;
+  }
+  .sidebar.open .nav-list li.open-link a i.open-icon{
+    display: none;
+  }
+  .sidebar.open .nav-list li.open-link a i.close-icon{
+    display: inline-block;
+  }
+  .sidebar.open .nav-list li.open-link a i.close-icon{
+    width: 30px;
+    text-align: center;
+    margin-right: 5px;
+  }
+  .sidebar .nav-list li.open-link a i{
+    text-align: center;
+    width: auto;
+    margin: 0;
+  }
+  .sidebar.open{
+    max-width: 25%;
+  }
+  .sidebar.open > ul > li:first-child ~ li{
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .main-content{
+    padding: 0;
+  }
+  .main-content-row, .main-content-row .row{
+    margin-left: 0;
+    margin-right: 0;
+  }
+} /* (max-width: 1000px) */
+
+@media only screen and (max-width: 850px){
+  table.tenant-table tr{
+    max-width: 49%;
+  }
+  .db-boxes-row{
+    flex-direction: column;
+  }
+  .db-boxes-row > *{
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+} /* (max-width: 850px) */
+
+@media only screen and (max-width: 660px){
+  table.tenant-table tr{
+    max-width: 300px;
+    margin: 0 auto 10px;
+  }
+  table.tenant-table tbody{
+    flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 576px){
+  .modal-dialog{
+    max-width: 600px;
+  }
+
+} /* (min-width: 576px) */
+
+@media only screen and (max-width: 430px){
+  table.tenant-table tr{
+    max-width: 100%;
+  }
+  .db-boxes-row{
+    padding: 0 10px;
+  }
+  .db-box{
+    padding: 5px 10px;
+  }
+  .d-block-small{
+    float: none;
+    display: block;
+    width: 100%;
+  }
+  .db-box .pagination li:nth-child(6),
+  .db-box .pagination li:nth-child(7){
+    display: none;
+  }
+  .db-box .pagination{
+    margin: 15px 0 5px;
+  }
+  .db-info-bar-row{
+    margin-bottom: 0;
+  }
+} /* (max-width: 660px) */
