--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,12 @@ body{
   clear: both;
   height: 0px;
 }
+.reset, .reset li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  line-height: 1em;
+}
 
 
 .top-nav-bar{
@@ -380,6 +386,7 @@ body{
 label{
   margin-bottom: 0;
   line-height: 1em;
+  font-weight: bold;
 }
 .form-group.flexed{
   display: flex;
@@ -880,8 +887,12 @@ form span.optional{
   padding-bottom: 1.1rem;
 }
 .profile-wrapper .heading.divider{
-  margin: 1.5rem 0 0;
-  border-bottom: 1px solid #000;
+  margin: 40px 0 0;
+  background: #414141;
+  color: #fff;
+  padding: .5rem;
+  border-radius: 5px;
+  font-size: 16px;
 }
 .profile-image-updater{
   background: #414141;
@@ -907,6 +918,9 @@ form span.optional{
   max-width: 32%;
   padding: .2rem .5rem;
 }
+.profile-tabs.associated .nav-item{
+  max-width: 49%;
+}
 .profile-tabs .nav-pills .nav-link.active,
 .profile-tabs .nav-pills .show>.nav-link{
   background: #414141;
@@ -924,9 +938,6 @@ form span.optional{
   }
   .profile-wrapper .profile-image img{
     margin-top: 5px;
-  }
-  .profile-head .heading{
-    text-align: center;
   }
   .profile-row,
   .profile-row > *,
@@ -953,3 +964,55 @@ form span.optional{
     display: none !important;
   }
 } /* (max-width: 767px) */
+
+@media only screen and (max-width: 767px){
+  #assoc-hide-tab-button{
+    max-width: 34px;
+  }
+} /* (max-width: 767px) */
+
+
+.assoc-list{
+  margin-top: 1rem;
+}
+.assoc-list-link{
+  display: block;
+  padding: 5px 10px;
+  border-radius: 3px;
+  background: #e9ecef;
+  margin-bottom: 5px;
+  color: #212529;
+  font-weight: bold;
+  border: 1px solid #ced4da;
+}
+.assoc-list-item:last-child .assoc-list-link{
+  margin-bottom: 0;
+}
+.assoc-list-link:hover{
+  text-decoration: none;
+}
+
+.notes-list{
+  margin-top: 1rem;
+}
+.notes-list .notes-list-item{
+  padding: 1rem;
+  background: #f5f5f5;
+  margin-bottom: 10px;
+  display: block;
+  border-radius: 5px;
+}
+.notes-list .notes-list-item:last-child{
+  margin-bottom: 0;
+}
+.notes-list .author{
+  display: inline-block;
+}
+.notes-list .text{
+  line-height: 1.2em;
+  display: block;
+}
+.notes-list .timeago{
+  font-style: italic;
+  font-size: .9em;
+}
