updating to use SCSS

--- a/resources/sass/main.css
+++ b/resources/sass/main.css
@@ -1,35 +1,33 @@
 /* ==========================================================================
-   #Table-of-Contents
+   $Table-of-Contents
    ========================================================================== */
 /*
   Globals
-    #Colors
-    #Typography
-    #Utilities
+    $Colors
+    $Typography
+    $Utilities
   Sections
-    #Header
-    #Content
-    #Footer
-  Pages / Components
-    #Tables
-    #Modals
+    $Header
+    $Content
+    $Footer
+  Pages
+    $Header
+    $Content
+    $Footer
 */
 /* ==========================================================================
-   #Colors
+   $Colors
    ========================================================================== */
 /* red */
 /* gold */
 /* teal */
 /* blue */
 /* ==========================================================================
-   #Typography
+   $Typography
    ========================================================================== */
 body {
   color: #333; }
 
-/* ==========================================================================
-   #Utilities
-   ========================================================================== */
 html {
   height: 100%; }
 
@@ -49,9 +47,6 @@ body {
   list-style: none;
   line-height: 1em; }
 
-/* ==========================================================================
-   #Header
-   ========================================================================== */
 .top-nav-bar {
   position: relative;
   z-index: 1; }
@@ -68,9 +63,6 @@ body {
 .top-nav-bar .navbar-toggler {
   background: #fefefe; }
 
-/* ==========================================================================
-   #Content
-   ========================================================================== */
 .main-content {
   display: flex;
   flex-direction: column;
@@ -197,7 +189,7 @@ body {
   padding: 0;
   list-style: none;
   /* columns: 2;
-      column-width: 200px; */
+    column-width: 200px; */
   flex: 1; }
 
 .db-box-list li {
@@ -365,9 +357,6 @@ body {
   background: #0586ff;
   color: #fff; }
 
-/* ==========================================================================
-   #Components
-   ========================================================================== */
 .btn-primary.btn-green {
   background: #02a792;
   border-color: #02a792; }
