--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,26 +110,45 @@ body {
 .sidebar .nav-sublist li:last-child {
   border: none; }
 
-.sidebar .nav-list .heading {
-  background: #505050;
+.sidebar .nav-sublist a {
+  padding: 5px;
   display: block;
-  padding: 10px; }
+  font-size: .8em;
+  text-indent: 45px; }
+
+.sidebar .nav-list .heading {
+  background: #414141;
+  display: block;
+  position: relative; }
+
+.sidebar .nav-list a {
+  color: #fff; }
 
 .sidebar .nav-list .heading:last-child {
   margin-bottom: 10px; }
 
-.sidebar .nav-list a {
-  display: block;
-  padding: 10px 15px;
+.sidebar .nav-list a:hover {
+  text-decoration: none;
+  color: #1ab394; }
+
+.sidebar .nav-list .heading-link,
+.sidebar .nav-list .heading.no-link {
+  padding: 10px;
+  display: block; }
+
+.sidebar .nav-list .add-link {
+  padding: 5px;
   line-height: 1em;
-  color: #fff;
-  font-size: .8em;
-  padding-left: 50px; }
+  font-size: 1em;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: #1ab394;
+  border: none; }
+  .sidebar .nav-list .add-link:hover {
+    background: #0d5a4a; }
 
-.sidebar .nav-list a.heading {
-  font-size: 1em; }
-
-.sidebar .nav-list .heading i {
+.sidebar .nav-list .heading i.heading-icon {
   width: 30px;
   text-align: center;
   margin-right: 5px; }
@@ -138,6 +157,25 @@ body {
   padding: 15px;
   flex: 1;
   padding-bottom: 50px; }
+
+.sidebar-open {
+  overflow: hidden; }
+
+.sidebar-overlay {
+  display: none;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #000;
+  z-index: 10;
+  opacity: .8;
+  cursor: pointer; }
+
+.sidebar-open .sidebar-overlay {
+  display: block; }
 
 @media only screen and (min-width: 1251px) {
   .sidebar {
@@ -408,12 +446,12 @@ body {
     /* (max-width: 910px)  */
     /* (max-width: 767px)  */
     /* (max-width: 500px)  */ }
-    @media only screen and (min-width: 768px) and (max-width: 910px) {
+    @media only screen and (min-width: 768px) and (max-width: 1100px) {
       .images-carousel .carousel-indicators .thumbnail-item {
         width: 100%; } }
     @media only screen and (max-width: 767px) {
       .images-carousel .carousel-indicators .thumbnail-item {
-        width: 23%; } }
+        width: 32%; } }
     @media only screen and (max-width: 500px) {
       .images-carousel .carousel-indicators .thumbnail-item {
         width: 48%; } }
@@ -792,12 +830,16 @@ table.dataTable > tbody > tr.child ul.dtr-details {
     max-width: 55px;
     overflow: hidden;
     white-space: nowrap;
-    position: absolute;
+    position: fixed;
     left: 0;
-    z-index: 10; }
-  .sidebar > ul > li:first-child ~ li {
-    opacity: 0;
-    pointer-events: none; }
+    top: 0;
+    bottom: 0;
+    z-index: 10;
+    height: auto;
+    max-height: none;
+    margin: 0; }
+  .top-nav-bar {
+    padding: 0 10px 0 65px; }
   .content {
     max-width: 100%;
     width: 100%;
@@ -824,7 +866,7 @@ table.dataTable > tbody > tr.child ul.dtr-details {
     width: auto;
     margin: 0; }
   .sidebar.open {
-    max-width: 25%; }
+    max-width: 200px; }
   .sidebar.open > ul > li:first-child ~ li {
     opacity: 1;
     pointer-events: auto; }
