--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -126,26 +126,48 @@
     .sidebar .nav-sublist li:last-child{
       border:none;
     }
-    .sidebar .nav-list .heading{
-      background: #505050;
+    .sidebar .nav-sublist a{
+      padding: 5px;
       display: block;
-      padding: 10px;
+      font-size: .8em;
+      text-indent: 45px;
+    }
+    .sidebar .nav-list .heading{
+      background: $dark-grey;
+      display: block;
+      position: relative;
+    }
+    .sidebar .nav-list a{
+      color: #fff;
     }
     .sidebar .nav-list .heading:last-child{
       margin-bottom: 10px;
     }
-    .sidebar .nav-list a{
+    .sidebar .nav-list a:hover{
+      text-decoration: none;
+      color: $primary;
+    }
+
+    .sidebar .nav-list .heading-link,
+    .sidebar .nav-list .heading.no-link{
+      padding: 10px;
       display: block;
-      padding: 10px 15px;
+    }
+    .sidebar .nav-list .add-link{
+      padding: 5px;
       line-height: 1em;
-      color: #fff;
-      font-size: .8em;
-      padding-left: 50px;
-    }
-    .sidebar .nav-list a.heading{
       font-size: 1em;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      background: $primary;
+      border: none;
+
+      &:hover{
+        background: darken($primary, 20%);
+      }
     }
-    .sidebar .nav-list .heading i{
+    .sidebar .nav-list .heading i.heading-icon{
       width: 30px;
       text-align: center;
       margin-right: 5px;
@@ -154,6 +176,25 @@
       padding: 15px;
       flex: 1;
       padding-bottom: 50px;
+    }
+    .sidebar-open{
+      overflow: hidden;
+    }
+    .sidebar-overlay{
+      display: none;
+      position: absolute;
+      width: 100%;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background: #000;
+      z-index: 10;
+      opacity: .8;
+      cursor: pointer;
+    }
+    .sidebar-open .sidebar-overlay{
+      display: block;
     }
     @media only screen and (min-width: 1251px) {
       .sidebar{
@@ -433,7 +474,7 @@
           height: auto;
           text-indent: initial;
 
-          @media only screen and (min-width: 768px) and (max-width: 910px)  {
+          @media only screen and (min-width: 768px) and (max-width: 1100px)  {
             &{
               width: 100%;
             }
@@ -441,7 +482,7 @@
 
           @media only screen and (max-width: 767px)  {
             &{
-              width: 23%;
+              width: 32%;
             }
           } /* (max-width: 767px)  */
 
@@ -894,13 +935,20 @@
         max-width: 55px;
         overflow: hidden;
         white-space: nowrap;
-        position: absolute;
+        position: fixed;
         left: 0;
+        top: 0;
+        bottom: 0;
         z-index: 10;
+        height: auto;
+        max-height: none;
+        margin: 0;
+      }
+      .top-nav-bar{
+        padding: 0 10px 0 65px;
       }
       .sidebar > ul > li:first-child ~ li{
-        opacity: 0;
-        pointer-events: none;
+
       }
       .content{
         max-width: 100%;
@@ -937,7 +985,7 @@
         margin: 0;
       }
       .sidebar.open{
-        max-width: 25%;
+        max-width: 200px;
       }
       .sidebar.open > ul > li:first-child ~ li{
         opacity: 1;
